quickstart updated with sparsity sweep

--- a/quickstart.ipynb
+++ b/quickstart.ipynb
@@ -452,15 +452,15 @@
       "Using region-weights = {'X0': 0.9996579124236559, 'X1': 1.0003423217844034}\n",
       "Using lam_sparse = 0.0\n",
       "Using lam_orthog = 12658.539492404747\n",
-      "Using lam_region = 539.4486313027442\n"
+      "Using lam_region = 591.8763905190589\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:00<00:00,  8.25it/s]\n",
-      "100%|██████████| 1000/1000 [00:16<00:00, 62.16it/s]\n",
+      "100%|██████████| 2/2 [00:00<00:00,  8.97it/s]\n",
+      "100%|██████████| 1000/1000 [00:15<00:00, 64.79it/s]\n",
       "/Users/andrewulmer/nuin/research/mSCA/msca/architectures.py:168: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  self.model.weight = torch.tensor(V_combined, dtype=torch.float32)\n"
      ]
@@ -472,15 +472,409 @@
       "Using region-weights = {'X0': 0.9996579124236559, 'X1': 1.0003423217844034}\n",
       "Using lam_sparse = 0.10112915105307527\n",
       "Using lam_orthog = 12658.539492404747\n",
-      "Using lam_region = 536.0135324399056\n"
+      "Using lam_region = 537.2256862230016\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:00<00:00,  9.73it/s]\n",
-      " 57%|█████▋    | 568/1000 [00:09<00:06, 63.30it/s]"
+      "100%|██████████| 2/2 [00:00<00:00,  9.04it/s]\n",
+      "100%|██████████| 1000/1000 [00:16<00:00, 61.00it/s]\n",
+      "/Users/andrewulmer/nuin/research/mSCA/msca/architectures.py:168: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.model.weight = torch.tensor(V_combined, dtype=torch.float32)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using region-weights = {'X0': 0.9996579124236559, 'X1': 1.0003423217844034}\n",
+      "Using lam_sparse = 0.20225830210615053\n",
+      "Using lam_orthog = 12658.539492404747\n",
+      "Using lam_region = 594.5757459585753\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00,  5.59it/s]\n",
+      "100%|██████████| 1000/1000 [00:18<00:00, 53.19it/s]\n",
+      "/Users/andrewulmer/nuin/research/mSCA/msca/architectures.py:168: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.model.weight = torch.tensor(V_combined, dtype=torch.float32)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using region-weights = {'X0': 0.9996579124236559, 'X1': 1.0003423217844034}\n",
+      "Using lam_sparse = 0.30338745315922583\n",
+      "Using lam_orthog = 12658.539492404747\n",
+      "Using lam_region = 477.5938163746343\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00,  8.32it/s]\n",
+      "100%|██████████| 1000/1000 [00:15<00:00, 64.52it/s]\n",
+      "/Users/andrewulmer/nuin/research/mSCA/msca/architectures.py:168: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.model.weight = torch.tensor(V_combined, dtype=torch.float32)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using region-weights = {'X0': 0.9996579124236559, 'X1': 1.0003423217844034}\n",
+      "Using lam_sparse = 0.40451660421230107\n",
+      "Using lam_orthog = 12658.539492404747\n",
+      "Using lam_region = 477.5938163746343\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00, 10.44it/s]\n",
+      "100%|██████████| 1000/1000 [00:15<00:00, 65.69it/s]\n",
+      "/Users/andrewulmer/nuin/research/mSCA/msca/architectures.py:168: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.model.weight = torch.tensor(V_combined, dtype=torch.float32)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using region-weights = {'X0': 0.9996579124236559, 'X1': 1.0003423217844034}\n",
+      "Using lam_sparse = 0.5056457552653763\n",
+      "Using lam_orthog = 12658.539492404747\n",
+      "Using lam_region = 477.5938163746343\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00,  9.71it/s]\n",
+      "100%|██████████| 1000/1000 [00:15<00:00, 65.25it/s]\n",
+      "/Users/andrewulmer/nuin/research/mSCA/msca/architectures.py:168: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.model.weight = torch.tensor(V_combined, dtype=torch.float32)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using region-weights = {'X0': 0.9996579124236559, 'X1': 1.0003423217844034}\n",
+      "Using lam_sparse = 0.6067749063184517\n",
+      "Using lam_orthog = 12658.539492404747\n",
+      "Using lam_region = 477.5938163746343\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00,  8.64it/s]\n",
+      "100%|██████████| 1000/1000 [00:15<00:00, 65.21it/s]\n",
+      "/Users/andrewulmer/nuin/research/mSCA/msca/architectures.py:168: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.model.weight = torch.tensor(V_combined, dtype=torch.float32)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using region-weights = {'X0': 0.9996579124236559, 'X1': 1.0003423217844034}\n",
+      "Using lam_sparse = 0.7079040573715268\n",
+      "Using lam_orthog = 12658.539492404747\n",
+      "Using lam_region = 477.5938163746343\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00,  8.75it/s]\n",
+      "100%|██████████| 1000/1000 [00:15<00:00, 64.28it/s]\n",
+      "/Users/andrewulmer/nuin/research/mSCA/msca/architectures.py:168: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.model.weight = torch.tensor(V_combined, dtype=torch.float32)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using region-weights = {'X0': 0.9996579124236559, 'X1': 1.0003423217844034}\n",
+      "Using lam_sparse = 0.8090332084246021\n",
+      "Using lam_orthog = 12658.539492404747\n",
+      "Using lam_region = 590.4054112786396\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00,  8.26it/s]\n",
+      "100%|██████████| 1000/1000 [00:15<00:00, 64.94it/s]\n",
+      "/Users/andrewulmer/nuin/research/mSCA/msca/architectures.py:168: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.model.weight = torch.tensor(V_combined, dtype=torch.float32)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using region-weights = {'X0': 0.9996579124236559, 'X1': 1.0003423217844034}\n",
+      "Using lam_sparse = 0.9101623594776773\n",
+      "Using lam_orthog = 12658.539492404747\n",
+      "Using lam_region = 539.4486313027442\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00,  9.10it/s]\n",
+      "100%|██████████| 1000/1000 [00:15<00:00, 64.48it/s]\n",
+      "/Users/andrewulmer/nuin/research/mSCA/msca/architectures.py:168: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.model.weight = torch.tensor(V_combined, dtype=torch.float32)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using region-weights = {'X0': 0.9996579124236559, 'X1': 1.0003423217844034}\n",
+      "Using lam_sparse = 1.0112915105307525\n",
+      "Using lam_orthog = 12658.539492404747\n",
+      "Using lam_region = 520.3031855895473\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00,  8.82it/s]\n",
+      "100%|██████████| 1000/1000 [00:15<00:00, 66.11it/s]\n",
+      "/Users/andrewulmer/nuin/research/mSCA/msca/architectures.py:168: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.model.weight = torch.tensor(V_combined, dtype=torch.float32)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using region-weights = {'X0': 0.9996579124236559, 'X1': 1.0003423217844034}\n",
+      "Using lam_sparse = 1.112420661583828\n",
+      "Using lam_orthog = 12658.539492404747\n",
+      "Using lam_region = 539.4486313027442\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00,  9.90it/s]\n",
+      "100%|██████████| 1000/1000 [00:15<00:00, 64.07it/s]\n",
+      "/Users/andrewulmer/nuin/research/mSCA/msca/architectures.py:168: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.model.weight = torch.tensor(V_combined, dtype=torch.float32)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using region-weights = {'X0': 0.9996579124236559, 'X1': 1.0003423217844034}\n",
+      "Using lam_sparse = 1.2135498126369033\n",
+      "Using lam_orthog = 12658.539492404747\n",
+      "Using lam_region = 1086.2172410865091\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00,  9.01it/s]\n",
+      "100%|██████████| 1000/1000 [00:15<00:00, 66.23it/s]\n",
+      "/Users/andrewulmer/nuin/research/mSCA/msca/architectures.py:168: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.model.weight = torch.tensor(V_combined, dtype=torch.float32)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using region-weights = {'X0': 0.9996579124236559, 'X1': 1.0003423217844034}\n",
+      "Using lam_sparse = 1.3146789636899783\n",
+      "Using lam_orthog = 12658.539492404747\n",
+      "Using lam_region = 713.8799170429143\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00,  7.61it/s]\n",
+      "100%|██████████| 1000/1000 [00:16<00:00, 61.68it/s]\n",
+      "/Users/andrewulmer/nuin/research/mSCA/msca/architectures.py:168: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.model.weight = torch.tensor(V_combined, dtype=torch.float32)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using region-weights = {'X0': 0.9996579124236559, 'X1': 1.0003423217844034}\n",
+      "Using lam_sparse = 1.4158081147430537\n",
+      "Using lam_orthog = 12658.539492404747\n",
+      "Using lam_region = 595.4482279350736\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00, 10.49it/s]\n",
+      "100%|██████████| 1000/1000 [00:15<00:00, 64.24it/s]\n",
+      "/Users/andrewulmer/nuin/research/mSCA/msca/architectures.py:168: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.model.weight = torch.tensor(V_combined, dtype=torch.float32)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using region-weights = {'X0': 0.9996579124236559, 'X1': 1.0003423217844034}\n",
+      "Using lam_sparse = 1.516937265796129\n",
+      "Using lam_orthog = 12658.539492404747\n",
+      "Using lam_region = 520.3031855895473\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00,  8.98it/s]\n",
+      "100%|██████████| 1000/1000 [00:15<00:00, 65.61it/s]\n",
+      "/Users/andrewulmer/nuin/research/mSCA/msca/architectures.py:168: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.model.weight = torch.tensor(V_combined, dtype=torch.float32)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using region-weights = {'X0': 0.9996579124236559, 'X1': 1.0003423217844034}\n",
+      "Using lam_sparse = 1.6180664168492043\n",
+      "Using lam_orthog = 12658.539492404747\n",
+      "Using lam_region = 477.5938163746343\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00,  8.98it/s]\n",
+      "100%|██████████| 1000/1000 [00:15<00:00, 66.28it/s]\n",
+      "/Users/andrewulmer/nuin/research/mSCA/msca/architectures.py:168: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.model.weight = torch.tensor(V_combined, dtype=torch.float32)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using region-weights = {'X0': 0.9996579124236559, 'X1': 1.0003423217844034}\n",
+      "Using lam_sparse = 1.7191955679022795\n",
+      "Using lam_orthog = 12658.539492404747\n",
+      "Using lam_region = 689.9134691823801\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00, 10.07it/s]\n",
+      "100%|██████████| 1000/1000 [00:15<00:00, 64.39it/s]\n",
+      "/Users/andrewulmer/nuin/research/mSCA/msca/architectures.py:168: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.model.weight = torch.tensor(V_combined, dtype=torch.float32)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using region-weights = {'X0': 0.9996579124236559, 'X1': 1.0003423217844034}\n",
+      "Using lam_sparse = 1.8203247189553546\n",
+      "Using lam_orthog = 12658.539492404747\n",
+      "Using lam_region = 615.1802962707842\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00,  8.96it/s]\n",
+      "100%|██████████| 1000/1000 [00:17<00:00, 58.17it/s]\n",
+      "/Users/andrewulmer/nuin/research/mSCA/msca/architectures.py:168: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.model.weight = torch.tensor(V_combined, dtype=torch.float32)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using region-weights = {'X0': 0.9996579124236559, 'X1': 1.0003423217844034}\n",
+      "Using lam_sparse = 1.9214538700084298\n",
+      "Using lam_orthog = 12658.539492404747\n",
+      "Using lam_region = 520.9711840396293\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00,  8.32it/s]\n",
+      "100%|██████████| 1000/1000 [00:15<00:00, 63.49it/s]\n",
+      "/Users/andrewulmer/nuin/research/mSCA/msca/architectures.py:168: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.model.weight = torch.tensor(V_combined, dtype=torch.float32)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using region-weights = {'X0': 0.9996579124236559, 'X1': 1.0003423217844034}\n",
+      "Using lam_sparse = 2.022583021061505\n",
+      "Using lam_orthog = 12658.539492404747\n",
+      "Using lam_region = 477.5938163746343\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00,  9.93it/s]\n",
+      "100%|██████████| 1000/1000 [00:15<00:00, 64.62it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The model with the best sparsity value is stored at ./check_delete_later/test_sweep//msca_0.25.pt\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -490,7 +884,7 @@
     "\n",
     "# Set the number of components and number of epochs to use in each model fit in the sweep\n",
     "n_components = 5\n",
-    "n_epochs = 2 #4000\n",
+    "n_epochs = 4000\n",
     "\n",
     "best_sparsity = sparsity_sweep_bootstrap(\n",
     "    n_components, n_epochs, \"Gaussian\", X, f\"{sweep_folder}\"\n",
